<!--
  ~ Copyright (c) 2019.
  ~ Created by Josua Lengwenath
  -->

<resources>
    <string name="app_name">Application Manager</string>
    <string name="install">Install</string>
    <string name="no_thanks">No Thanks</string>
    <string name="download">Download</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Logs</string>
    <string name="menu_installed">Installed</string>
    <string name="latestVersion">Latest</string>
    <string name="loading">loading</string>
    <string name="currentVersion">Installed</string>
    <string name="update">Update</string>
    <string name="error_apk">There was an error!</string>
    <string name="download_update">Download update</string>
    <string name="menu_reset">Reset</string>
    <string name="logs">Logs</string>
    <string name="home">Home</string>
    <string name="repos">Downloads</string>
    <string name="installed">Installed</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="share_crash_url">Share Crash-Url</string>
    <string name="send_to">Send to</string>
    <string name="menu_action_delete">Delete</string>
    <string name="app_crash">App crashed</string>
    <string name="app_crashed">Application Crashed</string>
    <string name="update_on">Updated on</string>
    <string name="created_by">Created by</string>
    <string name="search">Search</string>
    <string name="downloaded">Repo Downloaded</string>
    <string name="version">Version</string>
    <string name="dertyp7214">DerTyp7214 (Josua Lengwenath)</string>


    <string name="url_github_dertyp7214">https://github.com/DerTyp7214</string>
    <string name="url_github_dertyp7214_profile_image">https://avatars1.githubusercontent.com/u/37804065?s=128</string>
    <string name="no_entries">No entries</string>
    <string name="update_available">Update Available!</string>
    <string name="checking_for_updates">Checking for updates</string>
    <string name="up_to_date">is up to date</string>
    <string name="uninstall">Uninstall</string>
    <string name="package_name">Package</string>
    <string name="todo">TODO</string>
    <string name="menu_dev_settings">Developer Settings</string>
    <string name="dev_settings">Developer Settings</string>
    <string name="text_developers">Developers</string>
    <string name="text_libs">Libraries</string>
    <string name="use_beta">Use Beta</string>
    <string name="dark_mode">Dark mode</string>
    <string name="color_style">Color Style</string>
    <string name="already_dev">You are already a Developer.</string>
    <string name="steps_to_dev">steps to become a Developer.</string>
    <string name="your_now_dev">You are now a Developer</string>
    <string name="dev_settings_enabled">Show Developer Settings</string>
    <string name="repositories">Repositories</string>
    <string name="repo_name">Repository Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="other_name">Take another Name</string>
    <string name="empty">Please type a name</string>
    <string name="already_registered">This Repo is already Registered</string>
</resources>
