<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView2"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appName"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>
        <TextView
                android:text="@string/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_version"
                android:textAlignment="center"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/dev_dertyp">
            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/profile_dertyp" android:layout_weight="1" android:layout_margin="5dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>
            <TextView
                    android:text="@string/dertyp7214"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_dertyp"
                    android:layout_weight="5"
                    android:textSize="17sp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/profile_dertyp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>